sudoku-rs/src/grid/format/snapshots/sudoku__grid__format__candidates_grid__tests__plain__snapshots__render__base_2_candidates_coordinates.snap
---
source: sudoku-rs/src/grid/format/candidates_grid.rs
expression: CandidatesGridPlain.render(&grid)
---
╔═══════════╦═══════════╗
║     │ 1   ║   2 │ 1 2 ║
║     │     ║     │     ║
║     │     ║     │     ║
║─────┼─────║─────┼─────║
║     │ 1   ║   2 │ 1 2 ║
║     │     ║     │     ║
║ 3   │ 3   ║ 3   │ 3   ║
╠═══════════╬═══════════╣
║     │ 1   ║   2 │ 1 2 ║
║     │     ║     │     ║
║   4 │   4 ║   4 │   4 ║
║─────┼─────║─────┼─────║
║     │ 1   ║   2 │ 1 2 ║
║     │     ║     │     ║
║ 3 4 │ 3 4 ║ 3 4 │ 3 4 ║
╚═══════════╩═══════════╝
