sudoku-rs/src/grid/format/snapshots/sudoku__grid__format__candidates_grid__tests__plain__snapshots__render__base_2_sample_0.snap
---
source: sudoku-rs/src/grid/format/candidates_grid.rs
expression: CandidatesGridPlain.render(&grid)
---
╔═══════╦═══════╗
║   │ 3 ║ 4 │   ║
║───┼───║───┼───║
║ 4 │   ║   │ 2 ║
╠═══════╬═══════╣
║ 1 │   ║   │ 3 ║
║───┼───║───┼───║
║   │ 2 ║ 1 │   ║
╚═══════╩═══════╝
