sudoku-rs/src/grid/format/snapshots/sudoku__grid__format__candidates_grid__tests__plain__snapshots__render__base_2_sample_1.snap
---
source: sudoku-rs/src/grid/format/candidates_grid.rs
expression: CandidatesGridPlain.render(&grid)
---
╔═══════╦═══════╗
║ 1 │   ║ 4 │   ║
║───┼───║───┼───║
║   │   ║   │   ║
╠═══════╬═══════╣
║   │   ║   │   ║
║───┼───║───┼───║
║   │ 1 ║   │ 2 ║
╚═══════╩═══════╝
