sudoku-rs/src/grid/format/snapshots/sudoku__grid__format__candidates_grid__tests__plain__snapshots__render__base_3_sample_0.snap
---
source: sudoku-rs/src/grid/format/candidates_grid.rs
expression: CandidatesGridPlain.render(&grid)
---
╔═══════════╦═══════════╦═══════════╗
║ 8 │   │   ║   │   │   ║   │   │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │   │ 3 ║ 6 │   │   ║   │   │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │ 7 │   ║   │ 9 │   ║ 2 │   │   ║
╠═══════════╬═══════════╬═══════════╣
║   │ 5 │   ║   │   │ 7 ║   │   │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │   │   ║   │ 4 │ 5 ║ 7 │   │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │   │   ║ 1 │   │   ║   │ 3 │   ║
╠═══════════╬═══════════╬═══════════╣
║   │   │ 1 ║   │   │   ║   │ 6 │ 8 ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │   │ 8 ║ 5 │   │   ║   │ 1 │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │ 9 │   ║   │   │   ║ 4 │   │   ║
╚═══════════╩═══════════╩═══════════╝
