sudoku-rs/src/grid/format/snapshots/sudoku__grid__format__candidates_grid__tests__plain__snapshots__render__base_3_sample_1.snap
---
source: sudoku-rs/src/grid/format/candidates_grid.rs
expression: CandidatesGridPlain.render(&grid)
---
╔═══════════╦═══════════╦═══════════╗
║   │ 5 │   ║   │ 8 │ 3 ║   │ 1 │ 7 ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │   │   ║ 1 │   │   ║ 4 │   │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║ 3 │   │ 4 ║   │   │ 5 ║ 6 │   │ 8 ║
╠═══════════╬═══════════╬═══════════╣
║   │   │   ║   │ 3 │   ║   │   │ 9 ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │ 9 │   ║ 8 │ 2 │ 4 ║ 5 │   │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │   │ 6 ║   │   │   ║   │ 7 │   ║
╠═══════════╬═══════════╬═══════════╣
║   │   │ 9 ║   │   │   ║   │ 5 │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │   │ 7 ║ 2 │ 9 │   ║   │ 8 │ 6 ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║ 1 │   │ 3 ║ 6 │   │ 7 ║ 2 │   │ 4 ║
╚═══════════╩═══════════╩═══════════╝
