sudoku-rs/src/grid/format/snapshots/sudoku__grid__format__candidates_grid__tests__plain__snapshots__render__base_3_sample_2.snap
---
source: sudoku-rs/src/grid/format/candidates_grid.rs
expression: CandidatesGridPlain.render(&grid)
---
╔═══════════╦═══════════╦═══════════╗
║ 2 │   │ 6 ║   │ 3 │   ║   │   │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │   │ 1 ║   │ 6 │ 5 ║   │ 7 │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │ 4 │ 7 ║ 1 │   │ 8 ║   │ 5 │   ║
╠═══════════╬═══════════╬═══════════╣
║ 5 │   │   ║   │   │   ║   │ 2 │ 9 ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │   │ 8 ║   │ 1 │ 9 ║ 4 │   │ 6 ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │   │   ║ 4 │ 2 │   ║   │   │ 1 ║
╠═══════════╬═══════════╬═══════════╣
║   │   │   ║   │ 4 │ 2 ║ 8 │   │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║ 6 │   │ 9 ║ 3 │   │   ║   │   │ 5 ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │ 7 │   ║   │   │   ║   │ 1 │ 3 ║
╚═══════════╩═══════════╩═══════════╝
