sudoku-rs/src/grid/format/snapshots/sudoku__grid__format__candidates_grid__tests__plain__snapshots__render__base_3_sample_3.snap
---
source: sudoku-rs/src/grid/format/candidates_grid.rs
expression: CandidatesGridPlain.render(&grid)
---
╔═══════════╦═══════════╦═══════════╗
║   │   │ 4 ║ 5 │   │ 2 ║ 1 │ 7 │ 8 ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║ 1 │   │   ║   │ 9 │   ║   │ 3 │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │   │   ║ 8 │   │   ║   │   │ 4 ║
╠═══════════╬═══════════╬═══════════╣
║ 6 │   │   ║ 4 │ 5 │   ║   │   │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │ 7 │   ║ 9 │   │   ║   │ 1 │ 2 ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║ 8 │   │ 1 ║ 2 │   │ 3 ║ 5 │   │   ║
╠═══════════╬═══════════╬═══════════╣
║ 4 │   │   ║   │   │   ║   │   │ 9 ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║ 3 │ 5 │   ║   │ 6 │   ║ 8 │   │ 7 ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │ 9 │   ║ 3 │   │   ║ 6 │ 2 │   ║
╚═══════════╩═══════════╩═══════════╝
