sudoku-rs/src/grid/format/snapshots/sudoku__grid__format__candidates_grid__tests__plain__snapshots__render__base_3_sample_4.snap
---
source: sudoku-rs/src/grid/format/candidates_grid.rs
expression: CandidatesGridPlain.render(&grid)
---
╔═══════════╦═══════════╦═══════════╗
║ 5 │ 9 │   ║   │   │   ║ 1 │ 4 │ 7 ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │   │   ║ 9 │   │   ║   │   │ 8 ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │ 7 │ 2 ║   │   │   ║   │ 3 │   ║
╠═══════════╬═══════════╬═══════════╣
║ 7 │   │   ║   │ 4 │   ║ 2 │ 9 │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │ 2 │   ║   │ 3 │   ║ 8 │   │ 6 ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║ 8 │   │   ║ 1 │ 7 │   ║   │ 5 │   ║
╠═══════════╬═══════════╬═══════════╣
║   │   │ 5 ║ 7 │ 6 │ 4 ║   │   │ 9 ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │ 3 │ 6 ║   │   │ 5 ║   │   │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║ 1 │   │   ║ 8 │   │   ║   │   │ 2 ║
╚═══════════╩═══════════╩═══════════╝
