sudoku-rs/src/grid/format/snapshots/sudoku__grid__format__candidates_grid__tests__plain__snapshots__render__base_3_sample_5.snap
---
source: sudoku-rs/src/grid/format/candidates_grid.rs
expression: CandidatesGridPlain.render(&grid)
---
╔═══════════╦═══════════╦═══════════╗
║ 9 │   │   ║   │ 8 │ 4 ║   │ 6 │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║ 6 │   │ 4 ║   │   │ 5 ║ 2 │   │ 7 ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │ 3 │   ║   │ 7 │   ║   │ 8 │   ║
╠═══════════╬═══════════╬═══════════╣
║ 7 │ 6 │   ║   │   │ 1 ║ 5 │   │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │ 5 │ 3 ║   │   │   ║   │   │ 1 ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │   │   ║ 4 │   │ 9 ║ 6 │   │ 3 ║
╠═══════════╬═══════════╬═══════════╣
║ 1 │   │ 5 ║   │ 2 │ 6 ║   │ 9 │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │   │ 2 ║   │ 4 │   ║   │   │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║ 8 │   │   ║   │   │ 3 ║ 7 │ 1 │   ║
╚═══════════╩═══════════╩═══════════╝
