sudoku-rs/src/grid/format/snapshots/sudoku__grid__format__candidates_grid__tests__plain__snapshots__render__base_3_sample_6.snap
---
source: sudoku-rs/src/grid/format/candidates_grid.rs
expression: CandidatesGridPlain.render(&grid)
---
╔═══════════╦═══════════╦═══════════╗
║ 3 │   │   ║   │ 6 │   ║ 7 │   │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║ 8 │   │   ║   │   │   ║ 5 │   │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │   │   ║ 9 │   │   ║   │   │ 2 ║
╠═══════════╬═══════════╬═══════════╣
║ 6 │ 4 │   ║   │   │   ║   │   │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │ 8 │   ║   │ 5 │   ║   │   │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║ 5 │   │   ║   │   │ 2 ║ 4 │   │ 9 ║
╠═══════════╬═══════════╬═══════════╣
║   │   │ 6 ║   │ 4 │   ║ 3 │   │ 5 ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │   │ 9 ║   │   │   ║   │   │ 1 ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │   │   ║   │ 2 │   ║   │   │ 6 ║
╚═══════════╩═══════════╩═══════════╝
